# trajectory

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  config.yaml  meta-process.yaml  pyproject.toml
.claude/: settings.json
acceptance_gates/: CLAUDE.md
docs/: CLAUDE.md  VISUALIZATION_EXPERIMENTS.md  wiki_manifest.yaml
docs/meta-patterns/worktree-coordination/: 18_claim-system.md  19_worktree-enforcement.md  20_rebase-workflow.md  README.md  (+2 more)
hooks/: CLAUDE.md  pre-commit
prompts/: CLAUDE.md  concept_linking.yaml  dataflow_layout.yaml  dataflow_tile.yaml  event_classification.yaml  mural_layout.yaml  mural_tile.yaml  narrative_diagram.yaml  project_narrative.yaml  query_synthesis.yaml  session_classification.yaml
scripts/: build_prototypes.py
scripts/meta/: CLAUDE.md
tests/: conftest.py  test_agent_memory_bridge.py  test_claude_log_extractor.py  test_concept_linker.py  test_db.py  test_git_extractor.py  test_mcp_server.py  test_query_engine.py  test_session_builder.py
trajectory/: CLAUDE.md  cli.py  config.py  db.py  ingest.py  mcp_server.py  models.py  timeline.py
trajectory/analysis/: CLAUDE.md  __init__.py  agent_memory_bridge.py  concept_linker.py  event_classifier.py
trajectory/extractors/: CLAUDE.md  base.py  claude_log_extractor.py  concept_rollup.py  dep_extractor.py  doc_extractor.py  git_extractor.py  session_builder.py  tech_extractor.py  work_pattern_extractor.py
trajectory/output/: CLAUDE.md  concept_evolution.py  concept_heatmap.py  mural.py  project_narrative.py  project_wrapped.py  query_engine.py  wrapped.py
(+1 files in other folders)
